--- a/TestCalculatePnrNet/App.config
+++ b/TestCalculatePnrNet/App.config
@@ -12,4 +12,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+	<connectionStrings>
+		<add name="PnrDbContext" connectionString="metadata=res://*/Data.Model.csdl|res://*/Data.Model.ssdl|res://*/Data.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PelegTerminals;initial catalog=test_Odyssea;persist security info=True;user id=sa;password=Peleg123$;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	</connectionStrings>
 </configuration>
